[gd_scene load_steps=16 format=3 uid="uid://d1pg6wbhb6kpu"]

[ext_resource type="Texture2D" uid="uid://cqtak0u6vo507" path="res://examples/images/buttons/button_normal.png" id="1"]
[ext_resource type="FontFile" uid="uid://c3yvej8f6cmbt" path="res://examples/fonts/Vollkorn-Regular.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://3pbdwuiyc2oq" path="res://examples/images/buttons/button_focus_hover.png" id="3"]
[ext_resource type="Texture2D" uid="uid://wfu1k8lh4w6s" path="res://examples/images/buttons/button_pressed.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bc85om0du1dms" path="res://examples/images/buttons/button_disabled.png" id="5"]
[ext_resource type="Texture2D" uid="uid://gvxnxvqvjqfg" path="res://examples/images/inkgd.png" id="6"]
[ext_resource type="Script" path="res://examples/scenes/main.gd" id="7"]
[ext_resource type="FontFile" path="res://examples/fonts/Poppins-Medium.tres" id="8"]

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="8"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/fonts/font = SubResource("7")

[sub_resource type="StyleBoxTexture" id="4"]
content_margin_left = 35.0
content_margin_top = 25.0
content_margin_right = 35.0
content_margin_bottom = 25.0
texture = ExtResource("5")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="2"]
content_margin_left = 35.0
content_margin_top = 25.0
content_margin_right = 35.0
content_margin_bottom = 25.0
texture = ExtResource("1")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="5"]
content_margin_left = 35.0
content_margin_top = 25.0
content_margin_right = 35.0
content_margin_bottom = 25.0
texture = ExtResource("3")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="6"]
content_margin_left = 35.0
content_margin_top = 25.0
content_margin_right = 35.0
content_margin_bottom = 25.0
texture = ExtResource("4")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="Theme" id="3"]
Button/colors/font_color = Color(0, 0, 0, 0.498039)
Button/colors/font_color_disabled = Color(0, 0, 0, 0.25098)
Button/colors/font_color_focus = Color(0, 0, 0, 0.498039)
Button/colors/font_color_hover = Color(0, 0, 0, 1)
Button/colors/font_color_pressed = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0, 0, 0, 0.25098)
Button/colors/font_focus_color = Color(0, 0, 0, 0.498039)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/fonts/font = ExtResource("8")
Button/styles/disabled = SubResource("4")
Button/styles/focus = SubResource("2")
Button/styles/hover = SubResource("5")
Button/styles/normal = SubResource("2")
Button/styles/pressed = SubResource("6")

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.929412, 0.898039, 0.854902, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 75

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 150
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("6")
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 75
alignment = 1

[node name="ExampleVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ExampleLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ExampleVBoxContainer"]
layout_mode = 2
theme = SubResource("8")
text = "Examples"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ExampleVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="TheIntercept" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ExampleVBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = SubResource("3")
text = "The Intercept"

[node name="CrimeScene" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ExampleVBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = SubResource("3")
text = "Crime Scene"

[node name="TestVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TestLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/TestVBoxContainer"]
layout_mode = 2
theme = SubResource("8")
text = "Tests"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TestVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Performance" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/TestVBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = SubResource("3")
text = "Performance"

[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/ExampleVBoxContainer/VBoxContainer/TheIntercept" to="." method="_switch_to_the_intercept"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/ExampleVBoxContainer/VBoxContainer/CrimeScene" to="." method="_switch_to_crime_scene"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/TestVBoxContainer/HBoxContainer/Performance" to="." method="_switch_to_performance"]
